--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="pexels-cottonbro-studio-5483077.jpg" alt="">
+                    <img src="—Pngtree—illustration of god krishna carrying_9150171.png" alt="">
                 </div>
             </div>
             <div class="right-header">
